<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    
    android:background="#993300"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nGame"
        android:textColor="#ffffcc"
        android:textSize="26sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="64dp"
        android:background="#ffffcc"
         android:textSize="28sp"
        android:textStyle="bold|italic"
        android:text="@string/start"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="28dp"
        android:background="#ffffcc"
          android:textSize="28sp"
        android:textStyle="bold|italic"
        android:text="@string/credit" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="32dp"
        android:textSize="28sp"
         android:background="#ffffcc"
        android:textStyle="bold|italic"
        android:text="@string/help" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_below="@+id/button3"
         android:textSize="28sp"
         android:background="#ffffcc"
        android:textStyle="bold|italic"
        android:layout_marginTop="31dp"
        android:text="@string/finish" />

</RelativeLayout>