<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#993300"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quest"
        android:gravity="center"
        android:textColor="#ffffcc"
        android:textSize="26sp"
        android:textStyle="bold|italic" 
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:textSize="28sp"
        android:textStyle="bold|italic"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:textSize="28sp"
        android:textStyle="bold|italic"
        android:text="@string/choice"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:textSize="28sp"
        android:textStyle="bold|italic"
        android:text="CheckBox" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
         android:textSize="28sp"
        android:textStyle="bold|italic"
        android:text="CheckBox" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      
        android:textSize="28sp"
        android:textStyle="bold|italic"
        android:text="CheckBox" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:textSize="28sp"
        android:textStyle="bold|italic"
        android:text="CheckBox" />

    <Button
        android:id="@+id/strext1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffcc"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        android:text="@string/exit" />

</LinearLayout>
